Kubernetes/Objects/13-HPA/03-keda/05-HTTP/01-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-keda
  labels:
    app: nginx-keda
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - name: nginx
              protocol: TCP
              containerPort: 80
