Kubernetes/Objects/13-HPA/03-keda/05-HTTP/clusterIP.yaml
apiVersion: v1
kind: Service
metadata:  
  name: nginx-keda
spec:
  selector:    
    app: nginx-keda
  type: ClusterIP
  ports:  
  - name: http
    port: 88
    targetPort: 80
    protocol: TCP
