Kubernetes/Objects/13-HPA/03-keda/05-HTTP/ingress-keda.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keda
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: dawid-test.pl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keda-interceptor-proxy   # ← lokalny ExternalName
            port:
              number: 8080
